01_K8s_Exercises/task_03_Networking_and_Ingress/mini_project/network-policies.yml
# Default deny all for the namespace but DNS (port 53) egress allowed
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-allow-dns-policy
  namespace: team-alpha
spec:
  podSelector: {}

  policyTypes:
  - Ingress
  - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

---
# Frontend accepts traffic from ingress-controller and sends to API.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-ingress-to-frontend
  namespace: team-alpha
spec:
  podSelector:
    matchLabels:
      app: frontend

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 5678

---
# API accepts traffic from Frontend and sends to Database.
# API also accepts traffic from nginx-ingress for ingress rule
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-frontend-to-api
  namespace: team-alpha
spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: ingress-nginx
    ports:
    - protocol: TCP
      port: 5678
  - from:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 5678
  
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: database
    ports:
    - protocol: TCP
      port: 5678

---
# Database accepts traffic from API.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-api-to-database
  namespace: team-alpha
spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: alpha
      podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 5678
